syntax = "proto3";

package arustio.blockio;

// File service for filesystem operations
service BlockNodeService {
  // Read blocks of a file
  rpc ReadBlock(ReadBlockRequest) returns (stream ReadBlockResponse);

  // Write file content
  rpc WriteBlock(stream WriteBlockRequest) returns (WriteBlockResponse);
}

message FileId {
  string id = 1;
  uint64 index = 2;
}

// Read blocks request
message ReadBlockRequest {
  string file_id = 1;
  uint64 index = 2;
}

// Read blocks response
message ReadBlockResponse {
  bytes data = 1;
}

// Write file request
message WriteBlockRequest {
  oneof data {
    FileId file_id = 1;
    bytes chunk = 3;
  }
}

// Write file response
message WriteBlockResponse {
  bool success = 1;
  string message = 2;
  uint64 bytes_written = 3;
}
